Completed: Steps 1-3 -- In Progress: Step 4

--- a/templates/cards.html
+++ b/templates/cards.html
@@ -17,6 +17,9 @@
 
   <!-- Mount Llambda's card on to this element. -->
   <div id="llambda"></div>
-</div>
+
+  <div id="merge"></div>
+
+  <div id="shortstack-overflow"></div>
 
 {% endblock %}
